--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -23,7 +23,7 @@
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis.Models;
 @using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Models
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis
-@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store
+
 @using Energy.App.Standalone.Features.EnergyReadings.Gas.Actions
 @using Energy.App.Standalone.Features.EnergyReadings.Gas
 @using Energy.App.Standalone.Features.EnergyReadings.Electricity
@@ -42,6 +42,9 @@
 @using Energy.App.Standalone.Features.Setup.Weather.Store
 @using Energy.App.Standalone.Features.Analysis.Store.HeatingForecast.Actions;
 @using Energy.App.Standalone.Features.Analysis.Store.HeatingForecast;
+@using Energy.App.Standalone.Features.Analysis.Store.HistoricalForecast;
+@using Energy.App.Standalone.Features.Analysis.Store.HistoricalForecast.Actions;
+
 @using Energy.App.Standalone.Features.AppInit.Store;
 @using Energy.App.Standalone.DTOs
 @using Energy.App.Standalone.DTOs.Tariffs
