--- a/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
@@ -25,9 +25,9 @@
 
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
 
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@CurrentPeriodAnalysis.ForecastCostPounds.eToMoneyFormat()</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon">@CurrentPeriodAnalysis.ForecastConsumption kWh</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@CurrentPeriodAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@CurrentPeriodForecastAnalysis.ForecastCostPounds.eToMoneyFormat()</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon">@CurrentPeriodForecastAnalysis.ForecastConsumption kWh</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@CurrentPeriodForecastAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
         </MudPaper>
 
         @if (PrimaryHeatSource)
@@ -35,7 +35,7 @@
             <MudDivider DividerType="DividerType.Middle"></MudDivider>
             <MudPaper Class="my-2 d-flex justify-center" Elevation="0">
 
-                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@CurrentPeriodAnalysis.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
+                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@CurrentPeriodForecastAnalysis.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
 
             </MudPaper>
         }
@@ -68,7 +68,7 @@
     public HistoricalAnalysis CurrentPeriodAnalysisToDate { get; set; }
 
     [Parameter, EditorRequired]
-    public ForecastAnalysis CurrentPeriodAnalysis { get; set; }
+    public ForecastAnalysis CurrentPeriodForecastAnalysis { get; set; }
 
     [Inject]
     IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
@@ -88,8 +88,8 @@
 
         _analysisOptionsActionFactory = new AnalysisOptionsActionFactory(MeterType);
         _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Current, CurrentPeriodAnalysisToDate.Start);
-        _rangeText = Term.AnalysisPeriodDateRangeText(RelativePeriod.Current, CurrentPeriodAnalysis.Start, CurrentPeriodAnalysis.End);
-        _temperatureText = Term.AnalysisPeriodTemperatureText(RelativePeriod.Current, CurrentPeriodAnalysis.TemperatureRange);
+        _rangeText = Term.AnalysisPeriodDateRangeText(RelativePeriod.Current, CurrentPeriodForecastAnalysis.Start, CurrentPeriodForecastAnalysis.End);
+        _temperatureText = Term.AnalysisPeriodTemperatureText(RelativePeriod.Current, CurrentPeriodForecastAnalysis.TemperatureRange);
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
 
         _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Current;
@@ -99,7 +99,7 @@
     {
         if (toggled)
         {
-            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Current, CurrentPeriodAnalysisToDate.Start, CurrentPeriodAnalysis.End);
+            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Current, CurrentPeriodAnalysisToDate.Start, CurrentPeriodForecastAnalysis.End);
             Dispatcher.Dispatch(setHighlightAction);
         }
         else
