--- a/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
@@ -1,91 +1,170 @@
-﻿@* @inject IJSRuntime JsRuntime *@
-@* @using MathNet.Numerics *@
-@* @implements IAsyncDisposable *@
-@* *@
-@* @if (_ready) *@
-@* { *@
-@*     <div id="profile-chart-meter-@MeterGlobalId" style="width: 100%; height: 500px; max-width: 100%"> *@
-@*     </div> *@
-@* } *@
-@* *@
-@* @code { *@
-@* *@
-@*     [Parameter, EditorRequired] *@
-@*     public Guid MeterGlobalId { get; set; } *@
-@* *@
-@*     [Parameter, EditorRequired] *@
-@*     public MeterType MeterType { get; set; } *@
-@* *@
-@*     [Inject] *@
-@*     AnalysisOptions AnalysisOptions { get; set; } *@
-@* *@
-@*     [Inject] *@
-@*     MeterDataState MeterDataState { get; set; } *@
-@* *@
-@*     private bool _ready; *@
-@* *@
-@*     protected override void OnParametersSet() *@
-@*     { *@
-@*         AnalysisOptions[MeterType].NotifySetHighlightRange += OnHighlightRange; *@
-@*         AnalysisOptions[MeterType].NotifyRemoveHighlightRange += OnRemoveHighlightRange; *@
-@* *@
-@*         AnalysisOptions[MeterType].NotifyToggleCostChange += OnToggledChanged; *@
-@*         _ready = true; *@
-@*     } *@
-@* *@
-@* *@
-@*     protected override async Task OnAfterRenderAsync(bool firstRender) *@
-@*     { *@
-@*         if (firstRender) *@
-@*         { *@
-@*             var meterData = MeterDataState.GetMeterChartData(MeterType); *@
-@* *@
-@*             await JsRuntime.InvokeVoidAsync("ChartFunctions.setChartNoTemperature", $"profile-chart-meter-{MeterGlobalId}", meterData.MeterChartProfile); *@
-@*             await AnalysisOptions[MeterType].SetChartRendered(true); *@
-@*         } *@
-@*     } *@
-@* *@
-@*     private async Task OnHighlightRange(DateTime start, DateTime end) *@
-@*     { *@
-@*         if (!AnalysisOptions[MeterType].ChartRendered) *@
-@*         { *@
-@*             return; *@
-@*         } *@
-@* *@
-@*         long startTicks = start.eToUnixTime(); *@
-@*         long endTicks = end.AddDays(1).AddMilliseconds(-1).eToUnixTime(); *@
-@* *@
-@* *@
-@*         await JsRuntime.InvokeVoidAsync("ChartFunctions.highlightRange", $"profile-chart-meter-{MeterGlobalId}", startTicks, endTicks); *@
-@*     } *@
-@* *@
-@*     private async Task OnRemoveHighlightRange() *@
-@*     { *@
-@*         if (!AnalysisOptions[MeterType].ChartRendered) *@
-@*         { *@
-@*             return; *@
-@*         } *@
-@* *@
-@*         await JsRuntime.InvokeVoidAsync("ChartFunctions.removeHighlight", $"profile-chart-meter-{MeterGlobalId}"); *@
-@*     } *@
-@* *@
-@* *@
-@*     public async ValueTask DisposeAsync() *@
-@*     { *@
-@*         AnalysisOptions[MeterType].NotifySetHighlightRange -= OnHighlightRange; *@
-@*         AnalysisOptions[MeterType].NotifyRemoveHighlightRange -= OnRemoveHighlightRange; *@
-@* *@
-@*         AnalysisOptions[MeterType].NotifyToggleCostChange -= OnToggledChanged; *@
-@* *@
-@*         await AnalysisOptions[MeterType].SetChartRendered(false); *@
-@* *@
-@*         await JsRuntime.InvokeVoidAsync("ChartFunctions.dispose", $"profile-chart-meter-{MeterGlobalId}"); *@
-@*     } *@
-@* *@
-@* *@
-@*     private async Task OnToggledChanged(bool showCost) *@
-@*     { *@
-@*         await JsRuntime.InvokeVoidAsync("ChartFunctions.toggleCostSeries", $"profile-chart-meter-{MeterGlobalId}", showCost); *@
-@*     } *@
-@* *@
-@* } *@
+﻿@inherits FluxorComponent
+@implements IAsyncDisposable
+@inject IJSRuntime JsRuntime
+
+@if (_ready)
+{
+    <h1>Hi</h1>
+    <div id="profile-chart-meter-@MeterGlobalId" style="width: 100%; height: 500px; max-width: 100%">
+    </div>
+}
+
+@code {
+
+    [Parameter, EditorRequired]
+    public MeterType MeterType { get; set; }
+
+    [Inject]
+    IState<AnalysisOptionsState> AnalysisOptions { get; set; }
+
+    [Inject]
+    IState<MeterSetupState> MeterSetupState { get; set; }
+
+    [Inject]
+    IState<ElectricityReadingsState> ElectricityReadingsState { get; set; }
+
+    [Inject]
+    IState<GasReadingsState> GasReadingsState { get; set; }
+
+
+    [Inject]
+    IState<WeatherState> WeatherState { get; set; }
+
+    [Inject]
+    IState<HistoricalForecastState> HistoricalForecastState { get; set; }
+
+    bool _chartRendered;
+
+    private bool _ready;
+    private Guid MeterGlobalId => MeterSetupState.Value[MeterType].GlobalId;
+
+    protected override void OnParametersSet()
+    {
+        switch (MeterType)
+        {
+            case MeterType.Electricity:
+                SubscribeToAction<ElectricityAnalysisOptionsSetHighlightRangeAction>(action => OnHighlightRangeHandler(action.Start, action.End));
+                SubscribeToAction<ElectricityAnalysisOptionsRemoveHighlightRangeAction>(_ => OnRemoveHighlightRangeHandler());
+                SubscribeToAction<ElectricityAnalysisOptionsShowCostAction>(c => OnToggledCostChangedHandler(c.ShowCost));
+                break;
+            case MeterType.Gas:
+                SubscribeToAction<GasAnalysisOptionsSetHighlightRangeAction>(action => OnHighlightRangeHandler(action.Start, action.End));
+                SubscribeToAction<GasAnalysisOptionsRemoveHighlightRangeAction>(_ => OnRemoveHighlightRangeHandler());
+                SubscribeToAction<GasAnalysisOptionsShowCostAction>(c => OnToggledCostChangedHandler(c.ShowCost));
+                break;
+
+            default:
+                throw new ArgumentOutOfRangeException();
+        }
+
+        _ready = true;
+    }
+
+    DateTime _latestReadingTime;
+
+    private List<ChartDailyForecastReading> GetChartDailyForecastReadings(DateTime latestReadingTime)
+    {
+        var forecastDailyCosts = HistoricalForecastState.Value[MeterType];
+
+        // get the start of the week for the latest reading
+        var latestReadingWeekStart = latestReadingTime.eStartOfWeek(DayOfWeek.Monday);
+
+        var lastDate = forecastDailyCosts.Last().UtcTime.eStartOfWeek(DayOfWeek.Monday).AddDays(-1);
+        var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime >= latestReadingWeekStart && c.UtcTime <= lastDate);
+
+        var forecastChartReadings = applicableForecastCosts.Select(Mapping.MapToChartReading).ToList();
+        return forecastChartReadings;
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            var costedReadings = MeterType switch
+            {
+                MeterType.Gas => GasReadingsState.Value.CostedReadings,
+                MeterType.Electricity => ElectricityReadingsState.Value.CostedReadings,
+                _ => throw new ArgumentOutOfRangeException()
+            };
+
+            var latestReading = costedReadings.Last();
+            var firstReading = costedReadings.First();
+
+            var chartReadings = costedReadings.Select(Mapping.MapToChartReading).ToList();
+
+            var forecastChartReadings = GetChartDailyForecastReadings(latestReading.UtcTime);
+
+            var firstReadingTicks = firstReading.UtcTime.eToUnixTicksNoOffset();
+            var latestReadingTicks = chartReadings.Last().DateTicks;
+
+
+            var highlightSet = AnalysisOptions.Value[MeterType].HighlightSet;
+            var meterChartProfile = new MeterChartProfile()
+                {
+                    ShowCost = AnalysisOptions.Value[MeterType].ShowCost,
+                    GlobalId = MeterGlobalId,
+                    LatestReading = latestReadingTicks,
+                    MostRecentWeekStart = latestReadingTicks,
+                    ProfileStart = chartReadings.First().DateTicks,
+                    OneMonthInTheFuture = latestReading.UtcTime.AddMonths(1).eToUnixTicksNoOffset(),
+                    ProfileEnd = forecastChartReadings.Last().DateTicks,
+                    ChartReadings = chartReadings,
+                    ChartDailyForecastReadings = forecastChartReadings,
+                    HighlightStart = highlightSet ? AnalysisOptions.Value[MeterType].HighlightStart?.eToUnixTicksNoOffset() : null,
+                    HighlightEnd = highlightSet ? AnalysisOptions.Value[MeterType].HighlightEnd?.eToUnixTicksNoOffset() : null
+                };
+
+            _latestReadingTime = latestReading.UtcTime;
+
+
+            await JsRuntime.InvokeVoidAsync("ChartFunctions.setEnergyOnlyChart", $"profile-chart-meter-{MeterGlobalId}", meterChartProfile);
+
+
+            _chartRendered = true;
+        }
+    }
+
+    private async void OnHighlightRangeHandler(DateTime start, DateTime end)
+    {
+        if (!_chartRendered)
+        {
+            return;
+        }
+
+        long startTicks = start.eToUnixTicksNoOffset();
+        long endTicks = end.eToUnixTicksNoOffset();
+
+
+        await JsRuntime.InvokeVoidAsync(
+            "ChartFunctions.highlightRange",
+            $"profile-chart-meter-{MeterGlobalId}",
+            startTicks,
+            endTicks);
+    }
+
+    private async void OnRemoveHighlightRangeHandler()
+    {
+        if (!_chartRendered)
+        {
+            return;
+        }
+
+        await JsRuntime.InvokeVoidAsync("ChartFunctions.removeHighlight", $"profile-chart-meter-{MeterGlobalId}");
+    }
+
+
+    private async void OnToggledCostChangedHandler(bool showCost)
+    {
+        if (!_chartRendered)
+        {
+            return;
+        }
+        await JsRuntime.InvokeVoidAsync("ChartFunctions.toggleCostSeries", $"profile-chart-meter-{MeterGlobalId}", showCost);
+    }
+
+    public async ValueTask DisposeAsync()
+    {
+        await JsRuntime.InvokeVoidAsync("ChartFunctions.dispose", $"profile-chart-meter-{MeterGlobalId}");
+    }
+
+}
