--- a/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
@@ -1,6 +1,4 @@
 ﻿@inherits FluxorComponent
-@using Energy.App.Standalone.Features.Setup.Weather.Store
-@using Energy.App.Standalone.Features.Setup.Meter.Store
 @implements IAsyncDisposable
 @inject IJSRuntime JsRuntime
 
@@ -68,7 +66,10 @@
     private List<ChartDailyForecastReading> GetChartDailyForecastReadings(DateTime latestReadingTime)
     {
         var forecastDailyCosts = HeatingForecastState.Value.ForecastDailyCosts;
-        var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime > latestReadingTime);
+        var latestReadingWeekStart = latestReadingTime.eStartOfWeek(DayOfWeek.Monday);
+
+        var lastDate = forecastDailyCosts.Last().UtcTime.eStartOfWeek(DayOfWeek.Monday).AddDays(-1);
+        var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime >= latestReadingWeekStart && c.UtcTime <= lastDate);
 
         var forecastChartReadings = applicableForecastCosts.Select(Mapping.MapToChartReading).ToList();
         return forecastChartReadings;
@@ -95,9 +96,9 @@
             var firstReadingTicks = firstReading.UtcTime.eToUnixTicksNoOffset();
             var latestReadingTicks = chartReadings.Last().DateTicks;
 
-
             var temperatureIconPoints = WeatherState.Value.WeatherReadings
-                .Where(c => c.UtcTime.eToUnixTicksNoOffset() >= firstReadingTicks)
+                .Where(c => c.UtcTime.eToUnixTicksNoOffset() >= firstReadingTicks
+                        && c.UtcTime.eToUnixTicksNoOffset() <= latestReadingTicks)
                 .Select(c => new TemperaturePoint()
                     {
                         DateTicks = c.UtcTime.eToUnixTicksNoOffset(),
@@ -107,7 +108,9 @@
 
                     }).ToList();
 
+            temperatureIconPoints.AddRange(HeatingForecastState.Value.ForecastWeatherReadings);
 
+            bool highlightSet = AnalysisOptions.Value[MeterType].HighlightSet;
             var meterChartProfile = new MeterChartProfile()
                 {
                     ShowCost = AnalysisOptions.Value[MeterType].ShowCost,
@@ -118,7 +121,9 @@
                     OneMonthInTheFuture = latestReading.UtcTime.AddMonths(1).eToUnixTicksNoOffset(),
                     ProfileEnd = temperatureIconPoints.Last().DateTicks,
                     ChartReadings = chartReadings,
-                    ChartDailyForecastReadings = forecastChartReadings
+                    ChartDailyForecastReadings = forecastChartReadings,
+                    HighlightStart = highlightSet ? AnalysisOptions.Value[MeterType].HighlightStart?.eToUnixTicksNoOffset() : null,
+                    HighlightEnd = highlightSet ? AnalysisOptions.Value[MeterType].HighlightEnd?.eToUnixTicksNoOffset() : null,
                 };
 
             _latestReadingTime = latestReading.UtcTime;
